# docs/swagger.json
@@ -35,7 +35,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Companies"
+                            "$ref": "#/definitions/v1Companies.GetCompanyInfoResponse"
                         }
                     },
                     "400": {
@@ -60,6 +60,94 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/company-stocks/buy/{user_id}": {
+            "post": {
+                "description": "buy the selected amount of company stock",
+                "tags": [
+                    "company_stock"
+                ],
+                "summary": "BuyCompanyStock",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1companystock.BuyCompanyStockRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserTransactions"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/company-stocks/sell/{user_id}": {
+            "post": {
+                "description": "sell the selected amount of company stock",
+                "tags": [
+                    "company_stock"
+                ],
+                "summary": "SellCompanyStock",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1companystock.SellCompanyStockRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserTransactions"
+                        }
                     },
                     "400": {
                         "description": "Bad Request"
@@ -103,6 +191,114 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.UserTransactions"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user-assets/profits/{user_id}": {
+            "get": {
+                "description": "get user assets profits",
+                "tags": [
+                    "user_assets"
+                ],
+                "summary": "GetUserAssetsProfits",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1userassets.UserAssetsProfits"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user-assets/value/{user_id}": {
+            "get": {
+                "description": "get user assets values",
+                "tags": [
+                    "user_assets"
+                ],
+                "summary": "GetUserAssetsValue",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1userassets.UserAssetsValues"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user-assets/{user_id}": {
+            "get": {
+                "description": "get user assets for current game",
+                "tags": [
+                    "user_assets"
+                ],
+                "summary": "GetUserAssets",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.UserAssets"
+                            }
                         }
                     },
                     "400": {
@@ -240,11 +436,84 @@
                 }
             }
         },
+        "models.CompanyStock": {
+            "type": "object",
+            "properties": {
+                "close_price": {
+                    "type": "number"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "highest_price": {
+                    "type": "number"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lowest_price": {
+                    "type": "number"
+                },
+                "number_of_transactions": {
+                    "type": "integer"
+                },
+                "open_price": {
+                    "type": "number"
+                },
+                "otc": {
+                    "type": "boolean"
+                },
+                "ticker": {
+                    "type": "string"
+                },
+                "trading_volume": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "volume_weighted_average_price": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.UserAssets": {
+            "type": "object",
+            "properties": {
+                "company_stock_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "price_per_unit": {
+                    "type": "number"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "ticker": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "models.UserTransactions": {
             "type": "object",
             "properties": {
-                "buy_or_sell": {
-                    "type": "string"
+                "buy_price": {
+                    "type": "number"
                 },
                 "company_stock_id": {
                     "type": "string"
@@ -252,20 +521,31 @@
                 "created_at": {
                     "type": "string"
                 },
-                "game_number": {
-                    "type": "integer"
-                },
                 "id": {
                     "type": "string"
                 },
                 "quantity": {
                     "type": "integer"
                 },
+                "sell_price": {
+                    "type": "number"
+                },
                 "updated_at": {
                     "type": "string"
                 },
                 "user_id": {
                     "type": "string"
+                }
+            }
+        },
+        "v1Companies.GetCompanyInfoResponse": {
+            "type": "object",
+            "properties": {
+                "company": {
+                    "$ref": "#/definitions/models.Companies"
+                },
+                "company_stock": {
+                    "$ref": "#/definitions/models.CompanyStock"
                 }
             }
         },
@@ -300,9 +580,6 @@
                 "current_balance": {
                     "type": "number"
                 },
-                "current_game_number": {
-                    "type": "integer"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -311,6 +588,17 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "v1companystock.BuyCompanyStockRequest": {
+            "type": "object",
+            "properties": {
+                "company_stock_id": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
                 }
             }
         },
@@ -323,11 +611,91 @@
                 "company_stock_id": {
                     "type": "string"
                 },
-                "game_number": {
+                "quantity": {
                     "type": "integer"
+                }
+            }
+        },
+        "v1companystock.SellCompanyStockRequest": {
+            "type": "object",
+            "properties": {
+                "company_stock_id": {
+                    "type": "string"
                 },
                 "quantity": {
                     "type": "integer"
+                }
+            }
+        },
+        "v1userassets.UserAssetsProfits": {
+            "type": "object",
+            "properties": {
+                "company_stock": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1userassets.UserAssetsProfitsPerStock"
+                    }
+                },
+                "total_current_value": {
+                    "type": "number"
+                },
+                "total_profit_": {
+                    "type": "number"
+                },
+                "total_profit_margin": {
+                    "type": "string"
+                },
+                "total_spent": {
+                    "type": "number"
+                }
+            }
+        },
+        "v1userassets.UserAssetsProfitsPerStock": {
+            "type": "object",
+            "properties": {
+                "buy_price": {
+                    "type": "number"
+                },
+                "company_stock": {
+                    "$ref": "#/definitions/models.CompanyStock"
+                },
+                "current_price": {
+                    "type": "number"
+                },
+                "profit_margin": {
+                    "type": "string"
+                },
+                "profit_per_unit": {
+                    "type": "number"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "total_buy_price": {
+                    "type": "number"
+                },
+                "total_current_price": {
+                    "type": "number"
+                },
+                "total_profit": {
+                    "type": "number"
+                }
+            }
+        },
+        "v1userassets.UserAssetsValues": {
+            "type": "object",
+            "properties": {
+                "quantity": {
+                    "type": "integer"
+                },
+                "ticker": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                },
+                "value_per_unit": {
+                    "type": "number"
                 }
             }
         }
