# handlers/v1/companies/handler.go
@@ -3,7 +3,6 @@ package v1Companies
 import (
 	dbhelper "capital-challenge-server/dbHelper"
 	"capital-challenge-server/polygon"
-	utils "capital-challenge-server/utils"
 	"database/sql"
 	"net/http"
 
@@ -18,7 +17,7 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        ticker   path      string  true  "Ticker"
-// @Success      200  {object}  models.Companies
+// @Success      200  {object}  GetCompanyInfoResponse
 // @Failure      400
 // @Failure      404
 // @Failure      500
@@ -27,41 +26,33 @@ func GetCompanyInfo(c *gin.Context) {
 	var req GetCompanyInfoRequest
 	req.Ticker = c.Param("ticker")
 
-	res, err := dbhelper.GetCompanyInfoByTicker(req.Ticker)
+	var res GetCompanyInfoResponse
+	companyStock, err := dbhelper.GetCompanyStockLatestInfoByTicker(req.Ticker)
+	if err != nil {
+		c.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
+	res.CompanyStock = companyStock
+
+	company, err := dbhelper.GetCompanyInfoByTicker(req.Ticker)
 	if err == sql.ErrNoRows {
 		company, err := polygon.GetCompanyInfoByTicker(req.Ticker)
 		if err != nil {
-			c.AbortWithStatus(http.StatusInternalServerError)
-			utils.Log(c, http.StatusInternalServerError)
+			c.AbortWithError(http.StatusInternalServerError, err)
 			return
 		}
 		company.ID = uuid.NewUUID()
+		res.Company = company
 
-		c.JSON(http.StatusOK, company)
+		c.JSON(http.StatusOK, res)
 		go dbhelper.InsertCompany(company)
-		utils.Log(c, http.StatusOK)
 		return
 	} else if err != sql.ErrNoRows && err != nil {
 		c.AbortWithStatus(http.StatusInternalServerError)
-		utils.Log(c, http.StatusInternalServerError)
 		return
 	}
 
+	res.Company = company
+
 	c.JSON(http.StatusOK, res)
-	utils.Log(c, http.StatusOK)
 }
-
-/*
-func GetCompanyInfo(c *gin.Context) {
-	var req GetCompanyInfoRequest
-	if err := c.BindJSON(&req); err != nil {
-		c.AbortWithStatus(http.StatusBadRequest)
-	}
-	err := validateGetCompanyInfoRequest(req)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, err)
-	}
-
-	c.JSON(http.StatusOK, req)
-}
-*/
