# handlers/v1/company_stock/validator.go
@@ -1,8 +1,11 @@
 package v1companystock
 
-import "fmt"
+import (
+	"fmt"
+	"strings"
+)
 
-func validateBuyCompanyStocksRequest(req BuyOrSellCompanyStocksRequest) error {
+func validateBuyOrSellCompanyStocksRequest(req BuyOrSellCompanyStocksRequest) error {
 	var errors []string
 	if len(req.CompanyStockID) <= 0 {
 		errors = append(errors, "company_stock_id is required")
@@ -18,6 +21,40 @@ func validateBuyCompanyStocksRequest(req BuyOrSellCompanyStocksRequest) error {
 
 	if len(errors) > 0 {
 		return fmt.Errorf("invalid BuyCompanyStocks request: %s", errors)
+	} else {
+		return nil
+	}
+}
+
+func validateBuyCompanyStocksRequest(req BuyCompanyStockRequest) error {
+	var errors []string
+	if len(req.CompanyStockID) <= 0 {
+		errors = append(errors, "company_stock_id is required")
+	}
+
+	if req.Quantity <= 0 {
+		errors = append(errors, "quantity must be higher than 0")
+	}
+
+	if len(errors) > 0 {
+		return fmt.Errorf("invalid BuyCompanyStocks request: %s", errors)
+	} else {
+		return nil
+	}
+}
+
+func validateSellCompanyStocksRequest(req SellCompanyStockRequest) error {
+	var errors []string
+	if len(req.CompanyStockID) <= 0 {
+		errors = append(errors, "company_stock_id is required")
+	}
+
+	if req.Quantity <= 0 {
+		errors = append(errors, "quantity must be higher than 0")
+	}
+
+	if len(errors) > 0 {
+		return fmt.Errorf("invalid BuyCompanyStocks request: %s", strings.Join(errors, ", "))
 	} else {
 		return nil
 	}
